--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         <div class="resumo">
             <div class="container">
-                <h1>Bem-vindo ao Achadinhos</h1>
+                <h1>Bem-vindo aos Achadinhos</h1>
                 <p>Somos uma plataforma dedicada a trazer para você as melhores ofertas da internet. De eletrônicos a moda, de artigos para casa a produtos de beleza, nossa missão é ajudá-lo a encontrar os melhores achados com descontos irresistíveis.</p>
                 <p>Navegue pelo nosso site e descubra uma variedade de produtos em destaque, explore diferentes categorias e fique por dentro das últimas novidades. Estamos aqui para tornar suas compras online mais econômicas e gratificantes.</p>
                 <a href="#destaques" class="btn">Ver Ofertas</a>
@@ -69,22 +69,24 @@
                 <div class="produtos">
                     <!-- Produto 1 -->
                     <div class="produto">
-                        <a href="#">
-                            <img src="imgs/acer-nitro.png" alt="Produto 1">
-                            <h3>Acer Nitro RTX 3050</h3>
+                        <a href="https://amzn.to/3uUY2JE" target="_blank">
+                            <img src="imgs/acer-nitro.png" alt="Notebook Acer Nitro">
+                            <h3>Notebook Acer Nitro RTX 3050</h3>
                             <p>Intel Core i5 12ª Geração, 8GB RAM, SSD 512GB, 144HZ, Windows 11 Home, Tela 15,6 Polegadas.</p>
                             <span class="preco">A partir de: R$ 4291,61 <br></span>
                             <button>Comprar</button>
+                            <p id="precoalt">Preço sujeito a alteração</p>
                         </a>
                     </div>
                     <!-- Produto 2 -->
                     <div class="produto">
                         <a href="#">
-                            <img src="imgs/headset.png" alt="Produto 2">
-                            <h3>Produto 2</h3>
-                            <p>Descrição curta do produto 2.</p>
-                            <span class="preco">A partir de: XX <br></span>
+                            <img src="imgs/zeus.png" alt="Headset Zeus X">
+                            <h3>Headset Redragon Sem Fio Zeus Pro 7.1 </h3>
+                            <p>Design ergonômico, possui conexões 2.4G/BT/ USB, conforto durante longos períodos de uso.</p>
+                            <span class="preco">A partir de: R$ 389,94 <br></span>
                             <button>Comprar</button>
+                            <p id="precoalt">Preço sujeito a alteração</p>
                         </a>
                     </div>
                     <!-- Produto 3 -->
@@ -95,6 +97,7 @@
                             <p>Descrição curta do produto 3.</p>
                             <span class="preco">A partir de: XX <br></span>
                             <button>Comprar</button>
+                            <p id="precoalt">Preço sujeito a alteração</p>
                         </a>
                     </div>
                     <!-- Produto 4 -->
@@ -105,6 +108,7 @@
                             <p>Descrição curta do produto 4.</p>
                             <span class="preco">A partir de: XX <br></span>
                             <button>Comprar</button>
+                            <p id="precoalt">Preço sujeito a alteração</p>
                         </a>
                     </div>
                     <!-- Produto 5 -->
@@ -115,6 +119,7 @@
                             <p>Descrição curta do produto 5.</p>
                             <span class="preco">A partir de: XX <br></span>
                             <button>Comprar</button>
+                            <p id="precoalt">Preço sujeito a alteração</p>
                         </a>
                     </div>
                     <!-- Produto 6 -->
@@ -125,6 +130,7 @@
                             <p>Descrição curta do produto 6.</p>
                             <span class="preco">A partir de: XX <br></span>
                             <button>Comprar</button>
+                            <p id="precoalt">Preço sujeito a alteração</p>
                         </a>
                     </div>
                 </div>
@@ -136,7 +142,6 @@
         <section id="novidades">
             <div class="container">
                 <h2>Novidades</h2>
-                <!-- Aqui você pode adicionar os produtos mais recentes -->
                 <div class="produtos">
                     <!-- Produto 1 -->
                     <div class="produto">
@@ -145,6 +150,7 @@
                         <p>Descrição curta do produto 7.</p>
                         <span class="preco">R$ XX,XX</span>
                         <button>Comprar</button>
+                        <p id="precoalt">Preço sujeito a alteração</p>
                     </div>
                     <!-- Produto 2 -->
                     <div class="produto">
@@ -153,6 +159,7 @@
                         <p>Descrição curta do produto 8.</p>
                         <span class="preco">R$ XX,XX</span>
                         <button>Comprar</button>
+                        <p id="precoalt">Preço sujeito a alteração</p>
                     </div>
                     <!-- Produto 3 -->
                     <div class="produto">
@@ -161,6 +168,7 @@
                         <p>Descrição curta do produto 9.</p>
                         <span class="preco">R$ XX,XX</span>
                         <button>Comprar</button>
+                        <p id="precoalt">Preço sujeito a alteração</p>
                     </div>
                 </div>
             </div>
