front page completed

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <!-- Produto 1 -->
                     <div class="produto">
                         <a href="https://amzn.to/3uUY2JE" target="_blank">
-                            <img src="imgs/acer-nitro.png" alt="Notebook Acer Nitro">
+                            <img src="imgs/acernitro5.png" alt="Notebook Acer Nitro">
                             <h3>Notebook Acer Nitro RTX 3050</h3>
                             <p>Intel Core i5 12ª Geração, 8GB RAM, SSD 512GB, 144HZ, Windows 11 Home, Tela 15,6 Polegadas.</p>
                             <span class="preco">A partir de: R$ 4291,61 <br></span>
@@ -80,8 +80,8 @@
                     </div>
                     <!-- Produto 2 -->
                     <div class="produto">
-                        <a href="#">
-                            <img src="imgs/zeus.png" alt="Headset Zeus X">
+                        <a href="https://amzn.to/44eSmaS" target="_blank">
+                            <img src="imgs/zeuspro.png" alt="Headset Zeus X">
                             <h3>Headset Redragon Sem Fio Zeus Pro 7.1 </h3>
                             <p>Design ergonômico, possui conexões 2.4G/BT/ USB, conforto durante longos períodos de uso.</p>
                             <span class="preco">A partir de: R$ 389,94 <br></span>
@@ -91,44 +91,44 @@
                     </div>
                     <!-- Produto 3 -->
                     <div class="produto">
-                        <a href="#">
-                            <img src="imgs/mouse.png" alt="Produto 3">
-                            <h3>Produto 3</h3>
-                            <p>Descrição curta do produto 3.</p>
-                            <span class="preco">A partir de: XX <br></span>
+                        <a href="https://amzn.to/49Sj36n" target="_blank">
+                            <img src="imgs/logitechmouse.png" alt="Mouse Logitech G305">
+                            <h3>Mouse Logitech Sem fio G305 LightSpeed</h3>
+                            <p>Sensor HERO até 12000 DPI, 1 ms, 250 horas de duração</p>
+                            <span class="preco">A partir de: R$ 269,90 <br></span>
                             <button>Comprar</button>
                             <p id="precoalt">Preço sujeito a alteração</p>
                         </a>
                     </div>
                     <!-- Produto 4 -->
                     <div class="produto">
-                        <a href="#">
-                            <img src="caminho/para/imagem4.jpg" alt="Produto 4">
-                            <h3>Produto 4</h3>
-                            <p>Descrição curta do produto 4.</p>
-                            <span class="preco">A partir de: XX <br></span>
+                        <a href="https://amzn.to/3UiLIfa" target="_blank">
+                            <img src="imgs/ssdwd.png" alt="SSD WDGREEN 1TB">
+                            <h3>SSD Western Digital 1TB </h3>
+                            <p>SATA 3 6GB s, Gravação 430MB/s, Leitura 545MB/s</p>
+                            <span class="preco">A partir de: R$ 399,99 <br></span>
                             <button>Comprar</button>
                             <p id="precoalt">Preço sujeito a alteração</p>
                         </a>
                     </div>
                     <!-- Produto 5 -->
                     <div class="produto">
-                        <a href="#">
-                            <img src="caminho/para/imagem5.jpg" alt="Produto 5">
-                            <h3>Produto 5</h3>
-                            <p>Descrição curta do produto 5.</p>
-                            <span class="preco">A partir de: XX <br></span>
+                        <a href="https://amzn.to/44iRSAj" target="_blank">
+                            <img src="imgs/galaxyfit3.png" alt="Galaxy Fit 3">
+                            <h3>Samsung Galaxy Fit3</h3>
+                            <p>Display 1.6 AMOLED, Bateria de Longa Duração, Resistência à água, Monitoramento do sono  </p>
+                            <span class="preco">A partir de: R$ 498,00 <br></span>
                             <button>Comprar</button>
                             <p id="precoalt">Preço sujeito a alteração</p>
                         </a>
                     </div>
                     <!-- Produto 6 -->
                     <div class="produto">
-                        <a href="#">
-                            <img src="caminho/para/imagem6.jpg" alt="Produto 6">
-                            <h3>Produto 6</h3>
-                            <p>Descrição curta do produto 6.</p>
-                            <span class="preco">A partir de: XX <br></span>
+                        <a href="https://amzn.to/3UgiqxN#" target="_blank">
+                            <img src="imgs/mousepadrgb.png" alt="MousePad RGB">
+                            <h3>MousePad RGB Grande UtechSmart</h3>
+                            <p>Antiderrapante, Plug and Play, 14 modos de iluminação, tamanho 800 x 300 mm</p>
+                            <span class="preco">A partir de: R$ 46,00 <br></span>
                             <button>Comprar</button>
                             <p id="precoalt">Preço sujeito a alteração</p>
                         </a>
@@ -141,34 +141,40 @@
     
         <section id="novidades">
             <div class="container">
-                <h2>Novidades</h2>
+                <h2>Melhores Avaliados</h2>
                 <div class="produtos">
                     <!-- Produto 1 -->
                     <div class="produto">
-                        <img src="caminho/para/imagem7.jpg" alt="Produto 7">
-                        <h3>Produto 7</h3>
-                        <p>Descrição curta do produto 7.</p>
-                        <span class="preco">R$ XX,XX</span>
-                        <button>Comprar</button>
-                        <p id="precoalt">Preço sujeito a alteração</p>
+                        <a href="https://amzn.to/3whsFcX" target="_blank">
+                            <img src="imgs/playstation5.png" alt="Playstation 5">
+                            <h3>Console Playstation 5</h3>
+                            <p>Resolução 4K, áudio 3D, Blu-Ray, SSD de ultra-velocidade</p>
+                            <span class="preco">R$ 3624,91</span>
+                            <button>Comprar</button>
+                            <p id="precoalt">Preço sujeito a alteração</p>
+                        </a>
                     </div>
                     <!-- Produto 2 -->
                     <div class="produto">
-                        <img src="caminho/para/imagem8.jpg" alt="Produto 8">
-                        <h3>Produto 8</h3>
-                        <p>Descrição curta do produto 8.</p>
-                        <span class="preco">R$ XX,XX</span>
-                        <button>Comprar</button>
-                        <p id="precoalt">Preço sujeito a alteração</p>
+                        <a href="https://amzn.to/4dfCQiX" target="_blank">
+                            <img src="imgs/echodot5.png" alt="Echo dot 5">
+                            <h3>Echo Dot 5ª geração</h3>
+                            <p>Melhor som já lançado, fácil de usar, compatibilidade com dispositivos de Casa Inteligente</p>
+                            <span class="preco">R$ 386,10</span>
+                            <button>Comprar</button>
+                            <p id="precoalt">Preço sujeito a alteração</p>
+                        </a>
                     </div>
                     <!-- Produto 3 -->
                     <div class="produto">
-                        <img src="caminho/para/imagem9.jpg" alt="Produto 9">
-                        <h3>Produto 9</h3>
-                        <p>Descrição curta do produto 9.</p>
-                        <span class="preco">R$ XX,XX</span>
-                        <button>Comprar</button>
-                        <p id="precoalt">Preço sujeito a alteração</p>
+                        <a href="https://amzn.to/3WfE87J" target="_blank">
+                            <img src="imgs/firesticktv.png" alt="Fire TV Stick">
+                            <h3>Fire TV Stick Full HD</h3>
+                            <p>Controle Remoto por Voz com Alexa,Streaming rápido e TV ao vivo, armazenamento em Nuvem</p>
+                            <span class="preco">R$ 298,98</span>
+                            <button>Comprar</button>
+                            <p id="precoalt">Preço sujeito a alteração</p>
+                        </a>
                     </div>
                 </div>
             </div>
