--- a/amazon.html
+++ b/amazon.html
@@ -18,38 +18,38 @@
 
     <section id="Paginaprodutos">
         <div class="container">
-            <h1 class="linha">Produtos da Shopee</h1>
+            <h1 class="linha">Produtos da Amazon</h1>
             <!-- Aqui você pode adicionar os produtos em destaque -->
             <div class="produtos">
                 <!-- Produto 1 -->
                 <div class="produto">
-                    <a href="https://shope.ee/8ziyb7NDiD?share_channel_code=1" target="_blank">
-                        <img src="imgs/camera.png" alt="Camera sem fio">
-                        <h3>Kit 2 Câmera Segurança 360 Infravermelho Sem Fio Wifi Yoosee</h3>
-                        <p>Wifi 2.4Ghz, visão remota de onde quer que você esteja, Monitoramento 360°, Visão Noturna</p>
-                        <span class="preco">A partir de: R$ 129,99 <br></span>
+                    <a href="https://amzn.to/4b1BDu3" target="_blank">
+                        <img src="imgs/kindle.png" alt="Kindle">
+                        <h3>Kindle 11ª Geração</h3>
+                        <p>16 GB – armazena milhares de eBooks, Uma única recarga dura até 6 semanas, resolução de 300 ppi</p>
+                        <span class="preco">A partir de: R$ 499,00 <br></span>
                         <button>Comprar</button>
                         <p id="precoalt">Preço sujeito a alteração</p>
                     </a>
                 </div>
                 <!-- Produto 2 -->
                 <div class="produto">
-                    <a href="https://shope.ee/9UfFCCUPKr?share_channel_code=1" target="_blank">
-                        <img src="imgs/powerbank.png" alt="Powwer bank">
-                        <h3>Carregador Portátil Power Bank 20.000mah</h3>
-                        <p>3 Entradas (Micro USB / Tipo C / iPhone), 1 saída USB, Indicador em LED</p>
-                        <span class="preco">A partir de: R$ 51,88 <br></span>
+                    <a href="https://amzn.to/4dAu9A6" target="_blank">
+                        <img src="imgs/wap.png" alt="Wap aspirador robô">
+                        <h3>WAP ROBOT W90</h3>
+                        <p>Aspirador de Pó Robô, Automático 3 em 1 Varre, Aspira, Passa Pano, MOP para Limpeza, 30W, Bateria Recarregável, Bivolt</p>
+                        <span class="preco">A partir de: R$ 319,90 <br></span>
                         <button>Comprar</button>
                         <p id="precoalt">Preço sujeito a alteração</p>
                     </a>
                 </div>
                 <!-- Produto 3 -->
                 <div class="produto">
-                    <a href="https://shope.ee/9zbVnDQ53Z?share_channel_code=1" target="_blank">
-                        <img src="imgs/fone.png" alt="Fone sem fio">
-                        <h3>Fone De Ouvido Sem Fio E6s Bluetooth 5.0 Tws</h3>
-                        <p>Design compacto, bateria de longa duração, Microfone Embutido, Cancelamento de Ruído</p>
-                        <span class="preco">A partir de: R$ 23,50 <br></span>
+                    <a href="https://amzn.to/3UoCy0x" target="_blank">
+                        <img src="imgs/caixadesom.png" alt="Caixa de som i2go">
+                        <h3>Caixa De Som Bluetooth i2GO</h3>
+                        <p>10W de potência RMS e Bateria de até 8h, resistente à água, Duração: Até 8h </p>
+                        <span class="preco">A partir de: R$ 109,90 <br></span>
                         <button>Comprar</button>
                         <p id="precoalt">Preço sujeito a alteração</p>
                     </a>
