--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
             <nav class="menu">
                 <ul>
-                    <li><a href="#amazon">Amazon</a></li> 
-                    <li><a href="#mercadolivre">Mercado Livre</a></li> 
-                    <li><a href="#shopee">Shopee</a></li> 
+                    <li><a href="amazon.html">Amazon</a></li> 
+                    <li><a href="mercadolivre.html">Mercado Livre</a></li> 
+                    <li><a href="shopee.html" target="_blank">Shopee</a></li> 
                     
                 </ul>
             </nav>
@@ -58,7 +58,7 @@
                 <h1>Bem-vindo aos Achadinhos</h1>
                 <p>Somos uma plataforma dedicada a trazer para você as melhores ofertas da internet. De eletrônicos a moda, de artigos para casa a produtos de beleza, nossa missão é ajudá-lo a encontrar os melhores achados com descontos irresistíveis.</p>
                 <p>Navegue pelo nosso site e descubra uma variedade de produtos em destaque, explore diferentes categorias e fique por dentro das últimas novidades. Estamos aqui para tornar suas compras online mais econômicas e gratificantes.</p>
-                <a href="#destaques" class="btn">Ver Ofertas</a>
+                <button class="btn" id="botao-oferta">Ver ofertas</button>
             </div>
         </div>
 
@@ -149,7 +149,7 @@
                             <img src="imgs/playstation5.png" alt="Playstation 5">
                             <h3>Console Playstation 5</h3>
                             <p>Resolução 4K, áudio 3D, Blu-Ray, SSD de ultra-velocidade</p>
-                            <span class="preco">R$ 3624,91</span>
+                            <span class="preco">A partir de: R$ 3624,91</span>
                             <button>Comprar</button>
                             <p id="precoalt">Preço sujeito a alteração</p>
                         </a>
@@ -160,7 +160,7 @@
                             <img src="imgs/echodot5.png" alt="Echo dot 5">
                             <h3>Echo Dot 5ª geração</h3>
                             <p>Melhor som já lançado, fácil de usar, compatibilidade com dispositivos de Casa Inteligente</p>
-                            <span class="preco">R$ 386,10</span>
+                            <span class="preco">A partir de: R$ 386,10</span>
                             <button>Comprar</button>
                             <p id="precoalt">Preço sujeito a alteração</p>
                         </a>
@@ -171,7 +171,7 @@
                             <img src="imgs/firesticktv.png" alt="Fire TV Stick">
                             <h3>Fire TV Stick Full HD</h3>
                             <p>Controle Remoto por Voz com Alexa,Streaming rápido e TV ao vivo, armazenamento em Nuvem</p>
-                            <span class="preco">R$ 298,98</span>
+                            <span class="preco">A partir de: R$ 298,98</span>
                             <button>Comprar</button>
                             <p id="precoalt">Preço sujeito a alteração</p>
                         </a>
