--- a/mercadolivre.html
+++ b/mercadolivre.html
@@ -18,38 +18,38 @@
 
     <section id="Paginaprodutos">
         <div class="container">
-            <h1 class="linha">Produtos da Shopee</h1>
+            <h1 class="linha">Produtos do Mercado Livre</h1>
             <!-- Aqui você pode adicionar os produtos em destaque -->
             <div class="produtos">
                 <!-- Produto 1 -->
                 <div class="produto">
-                    <a href="https://shope.ee/8ziyb7NDiD?share_channel_code=1" target="_blank">
-                        <img src="imgs/camera.png" alt="Camera sem fio">
-                        <h3>Kit 2 Câmera Segurança 360 Infravermelho Sem Fio Wifi Yoosee</h3>
-                        <p>Wifi 2.4Ghz, visão remota de onde quer que você esteja, Monitoramento 360°, Visão Noturna</p>
-                        <span class="preco">A partir de: R$ 129,99 <br></span>
+                    <a href="https://mercadolivre.com/sec/1PmS2qN" target="_blank">
+                        <img src="imgs/impressora.png" alt="Impressora">
+                        <h3>Impressora Hp Deskjet Ink Advantage 2774 Multifuncional</h3>
+                        <p>Impressão dupla face manual, Possui conexão Bluetooth e entrada USB, Suporta papel tamanho A4</p>
+                        <span class="preco">A partir de: R$ 459,00 <br></span>
                         <button>Comprar</button>
                         <p id="precoalt">Preço sujeito a alteração</p>
                     </a>
                 </div>
                 <!-- Produto 2 -->
                 <div class="produto">
-                    <a href="https://shope.ee/9UfFCCUPKr?share_channel_code=1" target="_blank">
-                        <img src="imgs/powerbank.png" alt="Powwer bank">
-                        <h3>Carregador Portátil Power Bank 20.000mah</h3>
-                        <p>3 Entradas (Micro USB / Tipo C / iPhone), 1 saída USB, Indicador em LED</p>
-                        <span class="preco">A partir de: R$ 51,88 <br></span>
+                    <a href="https://mercadolivre.com/sec/2RuPTxE" target="_blank">
+                        <img src="imgs/airfryer.png" alt="Air Fryer">
+                        <h3>Britânia Fritadeira Air Fryer 4L 1500W 110v</h3>
+                        <p>Timer de 60 minutos, Base antiderrapante, Cesto removível, Proteção contra superaquecimento</p>
+                        <span class="preco">A partir de: R$ 349,93 <br></span>
                         <button>Comprar</button>
                         <p id="precoalt">Preço sujeito a alteração</p>
                     </a>
                 </div>
                 <!-- Produto 3 -->
                 <div class="produto">
-                    <a href="https://shope.ee/9zbVnDQ53Z?share_channel_code=1" target="_blank">
-                        <img src="imgs/fone.png" alt="Fone sem fio">
-                        <h3>Fone De Ouvido Sem Fio E6s Bluetooth 5.0 Tws</h3>
-                        <p>Design compacto, bateria de longa duração, Microfone Embutido, Cancelamento de Ruído</p>
-                        <span class="preco">A partir de: R$ 23,50 <br></span>
+                    <a href="https://mercadolivre.com/sec/2x8cqUY" target="_blank">
+                        <img src="imgs/ssdkingston.png" alt="SSD kingston">
+                        <h3>Disco Sólido Interno Kingston A400 240gb</h3>
+                        <p>Capacidade: 240 GB, SATA III, Tamanho de 2.5, Resistente aos choques fortes </p>
+                        <span class="preco">A partir de: R$ 165,00 <br></span>
                         <button>Comprar</button>
                         <p id="precoalt">Preço sujeito a alteração</p>
                     </a>
