add media query for responsiveness

--- a/amazon.html
+++ b/amazon.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Produtos</title>
     <link rel="stylesheet" href="estilos/paginas.css">
+    <link rel="stylesheet" href="estilos/mediaquery.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> 
     <script src="javascript/produtos.js" defer></script>
 </head>
@@ -26,7 +27,7 @@
                     <a href="https://amzn.to/4b1BDu3" target="_blank">
                         <img src="imgs/kindle.png" alt="Kindle">
                         <h3>Kindle 11ª Geração</h3>
-                        <p>16 GB – armazena milhares de eBooks, Uma única recarga dura até 6 semanas, resolução de 300 ppi</p>
+                        <p>16 GB - armazena milhares de eBooks, Uma única recarga dura até 6 semanas, resolução de 300 ppi</p>
                         <span class="preco">A partir de: R$ 499,00 <br></span>
                         <button>Comprar</button>
                         <p id="precoalt">Preço sujeito a alteração</p>
