--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                 </div>
             <nav >
                 <ul>
-                    <li><a href="#">Amazon</a></li> 
-                    <li><a href="#">Mercado Livre</a></li> 
-                    <li><a href="#">Shopee</a></li>  
+                    <li><a href="amazon.html">Amazon</a></li> 
+                    <li><a href="mercadolivre.html">Mercado Livre</a></li> 
+                    <li><a href="shopee.html">Shopee</a></li>  
                     </ul>
                 </nav>
             </div>
@@ -187,8 +187,8 @@
                 <p>Se deseja continuar sua jornada de compras, confira nossos destaques e novidades.</p>
                 <p>Explore uma variedade de produtos em diferentes lojas! Seja no Mercado Livre, Shopee ou Amazon, você encontrará ofertas incríveis. Clique nos links abaixo para ver os produtos disponíveis em cada loja:</p>
                 <ul>
-                    <li><a href="#">Amazon</a></li>
-                    <li><a href="#">Mercado Livre</a></li>
+                    <li><a href="amazon.html">Amazon</a></li>
+                    <li><a href="mercadolivre.html">Mercado Livre</a></li>
                     <li><a href="shopee.html" target="_blank">Shopee</a></li>
                 </ul>
             </div>
