--- a/mercadolivre.html
+++ b/mercadolivre.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Produtos</title>
     <link rel="stylesheet" href="estilos/paginas.css">
+    <link rel="stylesheet" href="estilos/mediaquery.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> 
     <script src="javascript/produtos.js" defer></script>
 </head>
